test_suite/tests/ui/float/validate/bounds/upper_vs_lower.stderr
error: The lower bound (`greater` or `greater_or_equal`) cannot be greater than the upper bound (`less or `less_or_equal`).
       Sometimes we all need a little break.
 --> tests/ui/float/validate/bounds/upper_vs_lower.rs:3:26
  |
3 | #[nutype(validate(less = 0, greater_or_equal = 20))]
  |                          ^
